src/test/deca/codegen/valid/homemade/test/test_complet_mult_float_int.deca
{

    int x = 10;
    float y = 3.5;
    println("x * y = ",(x * y));
}
