src/test/deca/codegen/invalid/homemade/test/test_complet_affectation_float_trop_grand.deca
{
    float x  = 3.4028334665e38;
    println("x = ", (x));
}